Fix broken css

--- a/app/assets/stylesheets/pages/merge_requests.scss
+++ b/app/assets/stylesheets/pages/merge_requests.scss
@@ -795,7 +795,12 @@
   }
 
   .ci-status-icon {
-    margin-right: 7px;
+    vertical-align: sub;
+    svg {
+      width: 22px;
+      height: 22px;
+      margin-right: 8px;
+    }
   }
 
   .code-quality-container {
